Proyecto2/gRPC/kubernetes/consumer-loser.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: go-consumer-loser
  namespace: sopes1
spec: 
  selector:
    matchLabels:
      app: go-consumer-loser
  template: 
    metadata:
      labels:
        app: go-consumer-loser
    spec:
      containers:
      - name: go-consumer-loser
        image: ramirotelles/consumer-loser:0.31
        ports: 
        - containerPort: 8080
