Proyecto2/gRPC/kubernetes/goServer-Swiming.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-server-go-swimming
  namespace: sopes1
spec:
  selector: 
    matchLabels:
      app: grpc-server-go-swimming
  template:
    metadata:
      labels:
        app: grpc-server-go-swimming
    spec:
      containers:
      - name: grpc-server-go-swimming
        image: ramirotelles/golang-server-grpc:0.21
        ports:
        - containerPort: 50051
---
apiVersion: v1
kind: Service
metadata: 
  name: grpc-server-service-swimming
  namespace: sopes1
spec: 
  selector:
    app: grpc-server-go-swimming
  ports:
    - protocol: TCP
      port: 50051
      targetPort: 50051
  type: ClusterIP
