Proyecto2/gRPC/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: sopes1-ingress
  namespace: sopes1
  labels: 
    name: sopes1-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: 34.19.93.187.nip.io
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: go-client-service
                port:
                  number: 8080
            path: /grpc-go
          - pathType: Prefix
            backend:
              service:
                name: rust-client-service
                port:
                  number: 8081
            path: /grpc-rust
